--- a/Infrastructure.Read/infrastructure-read.csproj
+++ b/Infrastructure.Read/infrastructure-read.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\domain\domain.csproj" />
+  </ItemGroup>
+
 </Project>
